--- a/app/src/main/res/layout/fragment_add_entry.xml
+++ b/app/src/main/res/layout/fragment_add_entry.xml
@@ -114,6 +114,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
+                android:checkedButton="@id/radio_busy_time"
                 android:orientation="horizontal"
                 app:layout_constraintBottom_toTopOf="@+id/cancel_button"
                 app:layout_constraintTop_toBottomOf="@id/select_type_headline">
@@ -124,7 +125,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="24dp"
                     android:buttonTint="@color/blue_500"
-                    android:checked="true"
                     android:text="Busy Time"
                     android:textSize="12sp" />
 
@@ -133,7 +133,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:buttonTint="@color/orange_500"
-                    android:checked="false"
                     android:text="Free Time"
                     android:textSize="12sp" />
             </RadioGroup>
