--- a/app/src/main/res/layout/fragment_add_entry.xml
+++ b/app/src/main/res/layout/fragment_add_entry.xml
@@ -30,7 +30,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:text="Add new activity"
+                android:text="@string/add_activity"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:textSize="23sp"
                 app:layout_constraintBottom_toTopOf="@id/subline"
