--- a/app/src/main/res/layout/fragment_add_entry.xml
+++ b/app/src/main/res/layout/fragment_add_entry.xml
@@ -15,7 +15,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp">
+            android:layout_marginBottom="24dp"
+            android:layout_marginTop="32dp">
 
             <ImageView
                 android:id="@+id/back_arrow"
@@ -159,13 +160,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="32dp"
+                android:enabled="false"
                 android:text="Save"
                 android:textColor="@color/white"
                 android:textSize="15sp"
-                app:backgroundTint="@color/orange_500"
+                app:backgroundTint="@color/button_background_color"
                 app:cornerRadius="4dp"
                 app:layout_constraintStart_toEndOf="@id/cancel_button"
-                app:layout_constraintTop_toBottomOf="@id/radio_group" />
+                app:layout_constraintTop_toBottomOf="@id/radio_group"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
