--- a/app/src/main/res/layout/fragment_add_entry.xml
+++ b/app/src/main/res/layout/fragment_add_entry.xml
@@ -15,8 +15,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
-            android:layout_marginTop="32dp">
+            android:layout_marginTop="32dp"
+            android:layout_marginBottom="24dp">
 
             <ImageView
                 android:id="@+id/back_arrow"
@@ -167,7 +167,7 @@
                 app:backgroundTint="@color/button_background_color"
                 app:cornerRadius="4dp"
                 app:layout_constraintStart_toEndOf="@id/cancel_button"
-                app:layout_constraintTop_toBottomOf="@id/radio_group"/>
+                app:layout_constraintTop_toBottomOf="@id/radio_group" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
