--- a/app/src/main/res/layout/fragment_edit_entry.xml
+++ b/app/src/main/res/layout/fragment_edit_entry.xml
@@ -15,8 +15,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
-            android:layout_marginTop="32dp">
+            android:layout_marginTop="32dp"
+            android:layout_marginBottom="24dp">
 
             <ImageView
                 android:id="@+id/back_arrow"
@@ -115,7 +115,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:checkedButton="@id/radio_busy_time"
                 android:orientation="horizontal"
                 app:layout_constraintBottom_toTopOf="@+id/delete_button"
                 app:layout_constraintTop_toBottomOf="@id/select_type_headline">
@@ -160,10 +159,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="32dp"
+                android:enabled="true"
                 android:text="Save"
                 android:textColor="@color/white"
                 android:textSize="15sp"
-                app:backgroundTint="@color/orange_500"
+                app:backgroundTint="@color/button_background_color"
                 app:cornerRadius="4dp"
                 app:layout_constraintStart_toEndOf="@id/delete_button"
                 app:layout_constraintTop_toBottomOf="@id/radio_group" />
