--- a/app/src/main/res/layout/item_day.xml
+++ b/app/src/main/res/layout/item_day.xml
@@ -11,7 +11,8 @@
         android:layout_height="wrap_content"
         android:text="16"
         android:textAlignment="viewStart"
-        android:textSize="32dp"
+        android:textStyle="bold"
+        android:textSize="24sp"
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,12 +22,12 @@
         android:id="@+id/monthLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:minWidth="80dp"
-        android:text="May"
+        android:minWidth="50dp"
+        android:text="DEZ"
         android:textAlignment="center"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/dayLabel"/>
+        app:layout_constraintTop_toBottomOf="@id/dayLabel" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/dayList"
