--- a/app/src/main/res/layout/fragment_timerange_list.xml
+++ b/app/src/main/res/layout/fragment_timerange_list.xml
@@ -52,6 +52,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/line"
         tools:listitem="@layout/item_day"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginTop="12dp"
         />
 
