added x button and hint on Add and Edit, radio button and calendar on edit not working as intended

--- a/app/src/main/res/layout/fragment_add_entry.xml
+++ b/app/src/main/res/layout/fragment_add_entry.xml
@@ -26,6 +26,14 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
 
+            <ImageView
+                android:id="@+id/cancel_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_baseline_close_24" />
+
             <TextView
                 android:id="@+id/headline"
                 android:layout_width="0dp"
@@ -92,8 +100,10 @@
                 android:layout_height="50dp"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/input_border"
+                android:hint="1.0"
                 android:inputType="numberDecimal"
-                android:padding="16dp"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/hour_input_label" />
