--- a/app/src/main/res/layout/fragment_timerange_list.xml
+++ b/app/src/main/res/layout/fragment_timerange_list.xml
@@ -43,6 +43,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/allDays"
+        android:nestedScrollingEnabled="false"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         tools:itemCount="3"
