--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/dashboard">
+    app:startDestination="@id/weeklyOverview">
 
     <fragment
         android:id="@+id/dashboard"
@@ -23,7 +23,7 @@
 
     <fragment
         android:id="@+id/weeklyOverview"
-        android:name="com.example.bime.fragments.AddEntryFragment"
+        android:name="com.example.bime.fragments.WeeklyOverviewFragment"
         android:label="fragment_weekly_overview"
         tools:layout="@layout/fragment_weekly_overview">
         <action
