--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -28,30 +28,32 @@
                 app:layout_constraintBottom_toTopOf="@id/headerSubtitle"
                 android:layout_marginBottom="4dp"
                 />
+
             <TextView
                 android:id="@+id/headerSubtitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+                android:onClick="clickMyWeek"
                 android:text="This is how your last days went. "
                 android:textSize="16sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/headerTitle"
                 app:layout_constraintBottom_toTopOf="@id/myWeek"
-                android:layout_marginBottom="12dp"
-                />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/headerTitle" />
 
             <TextView
                 android:id="@+id/myWeek"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:layout_marginBottom="12dp"
                 android:text="My week"
-                android:textSize="16sp"
                 android:textColor="@color/orange_500"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toTopOf="@id/pieChart"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/pieChart"
-                android:layout_marginBottom="12dp"
-                android:layout_marginTop="32dp"
+                android:clickable="true"
                 />
 
             <com.github.mikephil.charting.charts.PieChart
@@ -75,7 +77,6 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="16dp" />
-
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 
