--- a/app/src/main/res/layout/fragment_timerange_list.xml
+++ b/app/src/main/res/layout/fragment_timerange_list.xml
@@ -29,6 +29,7 @@
         app:layout_constraintBottom_toTopOf="@id/line"
         android:layout_marginHorizontal="24dp"
         android:layout_marginBottom="12dp"
+        android:clickable="true"
      />
 
     <View
