--- a/app/src/main/res/layout/fragment_weekly_overview.xml
+++ b/app/src/main/res/layout/fragment_weekly_overview.xml
@@ -118,6 +118,7 @@
             />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/addActionButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_anchor="@id/bottomAppBar"
