--- a/app/src/main/res/layout/fragment_edit_entry.xml
+++ b/app/src/main/res/layout/fragment_edit_entry.xml
@@ -24,7 +24,9 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
+                app:srcCompat="@drawable/ic_baseline_arrow_back_24"
+                android:clickable="true"
+                />
 
             <ImageView
                 android:id="@+id/cancel_icon"
@@ -32,7 +34,9 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_baseline_close_24" />
+                app:srcCompat="@drawable/ic_baseline_close_24"
+                android:clickable="true"
+                />
 
             <TextView
                 android:id="@+id/headline"
