--- a/app/src/main/res/menu/bottom_app_bar_menu.xml
+++ b/app/src/main/res/menu/bottom_app_bar_menu.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/icon_home"
+        android:id="@+id/dashboard"
         android:icon="@drawable/ic_baseline_home_24"
         android:title="Home"
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/icon_list"
+        android:id="@+id/weeklyOverview"
         android:icon="@drawable/ic_baseline_format_list_numbered_24"
         android:title="List"
         app:showAsAction="ifRoom" />
